tests/e2e/gateway-api/nlb-gateway/00-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: helicone-infrastructure-nlb-gateway
  namespace: helicone-infrastructure
spec:
  gatewayClassName: aws-gateway-controller-nlb
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: helicone-infrastructure-default-route
  namespace: helicone-infrastructure
spec:
  parentRefs:
    - name: helicone-infrastructure-nlb-gateway
      namespace: helicone-infrastructure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: "https"
      backendRefs: []
